Fixed ADA issues on homepage banner text contrast

--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -218,6 +218,8 @@ slideshow-component:not(.page-width) .slider-buttons {
   font-size: 52px;
   line-height: 65px;
   letter-spacing: -1px;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .button:not([type='submit']) {
@@ -280,6 +282,8 @@ a.button {
   gap: 1rem;
   color: #FFF;
   font-size: 13px;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 /* iPad */
